# dotfile-manager

./: Cargo.toml  README.md
.github/workflows/: mr.yaml
core/: Cargo.toml
core/src/: basic_config.rs  configuration.rs  git.rs  lib.rs  projects.rs
dotfile/: Cargo.toml
dotfile/src/: lib.rs
mac/: Cargo.toml
mac/src/: lib.rs
src/: dfm.rs  main.rs
src/dfm/: model.rs  projects.rs  setup.rs
testFiles/: test.json  test.toml  test.yaml
