[package]
name = "dfm"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
	"core",
	"dotfile",
	"mac",
]

[lints.clippy]
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
mod_module_files = "forbid"

[dependencies]
core = { path = "core" }
dotfile = { path = "dotfile" }
mac = { path = "mac" }
anyhow = { workspace = true }
clap = { version = "4.5.34", features = ["cargo"] }

[workspace.dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
shellexpand = "3.1.0"
toml = "0.8.20"
