[package]
name = "core"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
shellexpand = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
